# tech-talk-computer-vision

./: README.md  app.py  main.py  pyproject.toml
app/: settings.py
app/api/routes/: stream.py
app/processors/: car.py
app/utils/: stream.py
app/yolo/: detector.py
